syntax = "proto3";

package pb;

option go_package = "projects/doc/doc_service/pkg/transport/protocol/grpc-pb;pb";

option java_multiple_files = true;
option java_outer_classname = "ProtocolProto";

message CreateService {
   string sid = 1; // id сервиса
   string type = 2;
   bytes pack = 3;
}


message Info {
   string sid = 1; // id сервиса
   string type = 2;
   bytes pack = 3;
}

message ReportFormat {
   string type = 1; // Тип отчета
   repeated ReportInfo info = 4; // Описание посылки
   bytes pack = 5; // Готовые данные в бинарном виде

}

message ReportInfo {
   int32 size = 1; // Размер файла
   string error = 2; // Описание ошибки формирования отчета
}
  
message ReportReq { // Формат запроса
   ReportFormat SrvAdr = 1;
}
  
message ReportResp { // Формат ответа
   ReportFormat SrvAdr = 1;
}


//Ping
message ServerPing {
   string sid = 1; // id сервиса
   string type = 2; // Тип опроса
   int64 tm = 3; // Время задержки
}

message PingReq { // Формат запроса
   ServerPing SrvPing = 1;
}
  
message PingResp { // Формат ответа
   ServerPing SrvPing = 1;
}

//Service
message CreateSrvReq { // Формат запроса
   CreateService Srv = 1;
}
  
message CreateSrvResp { // Формат ответа
   CreateService Srv = 1;
}

//Info
message InfoReq { // Формат запроса
   Info SrvInfo = 1;
}
  
message InfoResp { // Формат ответа
   Info SrvInfo = 1;
}

  
service Service {
   rpc GenerateReport (ReportReq) returns (ReportResp); // Генерация отчета
   rpc Ping (PingReq) returns (PingResp); // Проверка доступности сервиса
   rpc Info (InfoReq) returns (InfoResp); // Запрос информации у клиента
   rpc CreateSrv (CreateSrvReq) returns (CreateSrvResp); // Подключение новго микросервиса
}